--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #Don't show stacktrace (better security)
 server.error.include-message=never
 server.error.include-stacktrace=never
+
+spring.profiles.active=dev, test
